[package]
name = "secure_browse"
version = "0.3.0"
authors = ["Gregory Norton <gregory.norton@me.com>"]
build = "build.rs"

#[build-dependencies]
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.5"

[dependencies]
lazy_static = "1.0.0"
[target.'cfg(windows)'.dependencies]
winreg = "0.5.0"

[target.'cfg(not(windows))'.dependencies]
interfaces = "0.0.4"
